1️⃣ DTO Layer (very important in real projects) 2️⃣ Proper Exception Handling 3️⃣ Validation (@NotNull, @Email etc.) 4️⃣ Basic Authentication cleanup / role structure